Text formatting on mobile devices fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ html {
 	background: url(../home-img.png) no-repeat center;
 	background-size: cover;
 	background-attachment: fixed;
-	height: 2000px;
+	height: 4000px;
 }
 #name{
 	font-size: 7em;
@@ -62,6 +62,7 @@ a{
 
 
 .content{
+	
 	align-items: center;
 	align-content: center;
 	justify-content: center;
@@ -118,7 +119,7 @@ header{
 
 
 body{
-	max-height: 90vh;
+	max-height: 100vh;
 	margin: auto;
 	overflow-y: scroll;
     -webkit-overflow-scrolling:touch;
@@ -133,13 +134,22 @@ body{
 	grid-template-rows: repeat(4, 25vh);
 }
 
-@media (max-width: 768px) {
-    body {
+@media (max-width: 1200px) {
+	
+	body {
         height:100vh;
     }
 
+	#name {
+		font-size: 5em;
+	}
+
+	#subtitle {
+		font-size: 2.5em;
+	}
+
 	.navbar {
-		font-size: 10em;
+		font-size: 1.25em;
 	}
 }
 
